gosever/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: goserver
#daqui pra cima é um ReplicaSet
#daqui pra baixo é passado um pod.
  template:
    metadata:
      labels:
        app: goserver
    spec:
      containers:
      - name:  goserver
        image: dennisautg/goserver:1.0
        ports:
          - containerPort: 9090
