gosever/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: fc.com.br
    http: 
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: servicea
            port: 
              number: 80
      - pathType: Prefix
        path: "/checkout"
        backend:
          service:
            name: service-checkout
            port: 
              number: 3000
